ex/vm3/tests/emit/snapshots/emit__assign_field.snap
---
source: ex/vm3/tests/./common/mod.rs
expression: snapshot
---
function `__main__` (registers: 5, length: 20 (80 bytes))
.const
  0: "a"
  1: Int(0)
.code
  lnil  r0              ; let o
  lc    [0], r2         ; o.a = 0
  lsmi  0, r3
  sf    r0, r2, r3
  lc    [1], r2         ; o.0 = 0
  lsmi  0, r3
  sf    r0, r2, r3
  lc    [0], r2         ; o.a = o.a
  lf    r0, [0], r3
  sf    r0, r2, r3
  lc    [1], r2         ; o.0 = o.0
  lfi   r0, [1], r3
  sf    r0, r2, r3
  mtble r1              ; #{}.a = 0
  lc    [0], r2
  lsmi  0, r3
  sf    r1, r2, r3
  fin   
  lnil  r0
  ret   r0

