ex/vm3/tests/emit/snapshots/emit__assign_global.snap
---
source: ex/vm3/tests/./common/mod.rs
expression: snapshot
---
function `__main__` (registers: 1, length: 9 (36 bytes))
.const
  0: "a"
  1: "b"
.code
  lsmi  0, r0           ; a = 0
  sg    r0, [0]
  lsmi  1, r0           ; b = 1
  sg    r0, [1]
  lsmi  0, r0           ; a = 0
  sg    r0, [0]
  fin   
  lnil  r0
  ret   r0

