ex/vm3/tests/emit/snapshots/emit__assign_local.snap
---
source: ex/vm3/tests/./common/mod.rs
expression: snapshot
---
function `__main__` (registers: 2, length: 7 (28 bytes))
.code
  lsmi  0, r0           ; let a = 0
  lsmi  1, r1           ; let b = 1
  lsmi  1, r0           ; a = 1
  mov   r1, r0          ; a = b
  fin
  lnil  r0
  ret   r0

