ex/vm3/tests/emit/snapshots/emit__binary.snap
---
source: ex/vm3/tests/./common/mod.rs
expression: snapshot
---
function `__main__` (registers: 2, length: 40 (160 bytes))
.code
  lnil  r0              ; let v
  lsmi  1, r0           ; v = 1 + 1
  lsmi  1, r1
  add   r0, r1, r0
  lsmi  1, r0           ; v = 1 - 1
  lsmi  1, r1
  sub   r0, r1, r0
  lsmi  1, r0           ; v = 1 * 1
  lsmi  1, r1
  mul   r0, r1, r0
  lsmi  1, r0           ; v = 1 / 1
  lsmi  1, r1
  div   r0, r1, r0
  lsmi  1, r0           ; v = 1 % 1
  lsmi  1, r1
  rem   r0, r1, r0
  lsmi  1, r0           ; v = 1 ** 1
  lsmi  1, r1
  pow   r0, r1, r0
  lsmi  1, r0           ; v = 1 == 1
  lsmi  1, r1
  ceq   r0, r1, r0
  lsmi  1, r0           ; v = 1 != 1
  lsmi  1, r1
  cne   r0, r1, r0
  lsmi  1, r0           ; v = 1 > 1
  lsmi  1, r1
  cgt   r0, r1, r0
  lsmi  1, r0           ; v = 1 >= 1
  lsmi  1, r1
  cge   r0, r1, r0
  lsmi  1, r0           ; v = 1 < 1
  lsmi  1, r1
  clt   r0, r1, r0
  lsmi  1, r0           ; v = 1 <= 1
  lsmi  1, r1
  cle   r0, r1, r0
  fin   
  lnil  r0
  ret   r0

