ex/vm3/tests/emit/snapshots/emit__break_top_level.snap
---
source: ex/vm3/tests/./common/mod.rs
expression: snapshot
---
error: cannot use `break` outside of loop
