ex/vm3/tests/emit/snapshots/emit__continue_top_level.snap
---
source: ex/vm3/tests/./common/mod.rs
expression: snapshot
---
error in `continue_top_level`: cannot use `continue` outside of loop
1 |  continue
  |  ^^^^^^^^

