ex/vm3/tests/emit/snapshots/emit__emit.snap
---
source: ex/vm3/tests/emit.rs
expression: snapshot
input_file: ex/vm3/tests/emit/input/vars.h2
---
function `__main__` (registers: 3, length: 15 (60 bytes))
.code
  lsmi 10, %0
  smv %0, {0}
  lsmi 20, %0
  smv %0, {1}
  lmv {1}, %0
  smv %0, {2}
  lmv {2}, %0
  smv %0, {0}
  lsmi 10, %0
  lsmi 20, %1
  mov %1, %2
  mov %2, %0
  fin
  lnil %0
  ret %0

