ex/vm3/tests/emit/snapshots/emit__emit@assign_mvar.h2.snap
---
source: ex/vm3/tests/emit.rs
expression: snapshot
input_file: ex/vm3/tests/emit/input/assign_mvar.h2
---
function `__main__` (registers: 1, length: 11 (44 bytes))
.code
  lsmi  0, r0           ; let a = 0
  smv   r0, m0
  lsmi  1, r0           ; let b = 1
  smv   r0, m1
  lsmi  1, r0           ; a = 1
  smv   r0, m0
  lmv   m1, r0          ; a = b
  smv   r0, m0
  fin
  lnil  r0
  ret   r0

